[project]
name = "asset_dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "albert.lin",email = "albert.lin@presco.ws"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "yfinance (>=1.3.0,<2.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "rich (>=14.3.2,<15.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "requests-cache (>=1.3.1,<2.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.49.1,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "yahooquery (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]

[tool.poetry]
package-mode = false
